---
source: spade-tests/src/hir_lowering.rs
---
pipeline(5) X(clk: clock) -> bool {reg*5; false}

pipeline(6) main(clk: clock, x: bool) -> bool {
        let x = inst(5) X(clk);
    reg*5;
        let res = stage(-1).x;
    reg;
        res
}


error: Use of x before it is ready
  ┌─ testinput:6:29
  │
4 │         let x = inst(5) X(clk);
  │             - x is originally defined here at stage 0
5 │     reg*5;
6 │         let res = stage(-1).x;
  │                   --------- ^ x is unavailable at stage 4
  │                   │          
  │                   This refers to stage 4
  │
  = note: Since x is defined at stage 0 with latency 5, it cannot be accessed before stage 5
